--- a/src/components/form/InteractiveForm.scss
+++ b/src/components/form/InteractiveForm.scss
@@ -1,19 +1,18 @@
 @import "../core/shared/variables";
 
 .interactive_container {
-  position: absolute;
   font-size: $regular_font_size;
-  background-color: $white;
   width: 100%;
   height: 100vh;
-  z-index: -100;
   display: flex;
   flex-direction: row;
+  position: relative;
 }
 
 .interactive_card {
   background-image: url("./img/bg-main-desktop.png");
   background-repeat: no-repeat;
+  background-size: cover;
   width: 40%;
   height: 100vh;
   position: relative;
@@ -27,7 +26,9 @@
   width: 447px;
   height: 245px;
   top: 20vh;
-  left: 20vh;
+  left: 15vh;
+  box-shadow: 0.5rem 0.5rem 0.5rem rgb(80, 38, 90);
+  border-radius: 1rem;
 
   img {
     margin: 1.8rem 0 0 1.8rem;
@@ -62,7 +63,9 @@
   width: 447px;
   height: 245px;
   top: 25vh;
-  left: 30vh;
+  left: 25vh;
+  box-shadow: 0.5rem 0.5rem 0.5rem rgb(128, 127, 127);
+  border-radius: 1rem;
 }
 
 .credit_card_cvc {
@@ -212,7 +215,7 @@
     padding: 0.1rem 0.5rem;
     margin-top: 0.5rem;
     border: 1px solid rgb(136, 10, 136);
-    border-radius: .5rem;
+    border-radius: 0.5rem;
   }
 
   input::placeholder {
@@ -220,3 +223,87 @@
     font-weight: $normal_font_weight;
   }
 }
+
+.disable_form_input {
+  display: none !important;
+}
+
+.thanks {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  button {
+    box-shadow: 0 0 0.5rem rgb(61, 23, 68);
+  }
+}
+
+.thanks_content {
+  text-align: center;
+
+  h1 {
+    text-transform: uppercase;
+    letter-spacing: 0.2rem;
+    font-size: 1.3rem;
+    font-weight: bold;
+    color: $very_dark_violet;
+  }
+
+  p {
+    color: $dark_grayish_violet;
+    letter-spacing: 0.1rem;
+    font-weight: bold;
+  }
+}
+
+@media screen and (max-width: 1395px) {
+  .interactive_container {
+    flex-direction: column;
+  }
+
+  .interactive_card {
+    width: 100%;
+    height: 40%;
+    position: static;
+  }
+
+  .small_screen_positioning {
+    position: relative;
+    width: 100%;
+    height: max-content;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-self: center;
+    padding-top: 3rem;
+  }
+
+  .credit_card_front {
+    top: 10rem;
+    left: -3rem;
+  }
+
+  .credit_card_back {
+    top: -14rem;
+    left: 3rem;
+    z-index: -1;
+  }
+
+  .interactive_form {
+
+  }
+}
+
+
+@media screen and (max-width: 635px) {  
+    .credit_card_front {
+      width: auto;
+    }
+  
+    .credit_card_back {
+      width: 200px;
+      height: 100px;
+    }
+  }
+  
