final update before reset

--- a/src/components/form/InteractiveForm.scss
+++ b/src/components/form/InteractiveForm.scss
@@ -9,6 +9,10 @@
   position: relative;
 }
 
+.interactive_card_container {
+    margin: 1px;
+}
+
 .interactive_card {
   background-image: url("./img/bg-main-desktop.png");
   background-repeat: no-repeat;
