--- a/src/components/core/App.css
+++ b/src/components/core/App.css
@@ -1,5 +1,19 @@
 .App {
+  display: flex;
+  flex-direction: column;
+  transition: all ease-in-out 0.3s;
+  width: 100%;
+  height: 100%;
   font-size: 1.125rem;
   position: relative;
-  overflow: scroll
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+@media screen and (min-width: 715px) {
+  .App {
+    display: flex;
+    flex-direction: row;
+    transition: all ease-in-out 0.3s;
+  }
 }
