--- a/src/components/card/Card.scss
+++ b/src/components/card/Card.scss
@@ -1,142 +1,145 @@
 @import "../core/shared/variables";
 
-.card-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: max-content;
-}
-
-.card {
-  width: 100%;
-  height: 200px;
-  background-image: url(./img/bg-main-mobile.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-  padding: 0.5rem 0 1rem;
-  display: flex;
-  align-items: center;
-  justify-content: left;
-  margin-bottom: 5rem;
-}
-
-.back-card {
-  position: relative;
-  margin-left: 20%;
-  width: 275px;
-  height: 200px;
-
-  img {
-    width: 275px;
-    height: 200px;
-    object-fit: contain;
-  }
-
-  .card-cvc {
-    position: absolute;
-    z-index: 99;
-    top: 43%;
-    right: 11%;
-    font-size: 0.8rem;
-    font-weight: $normal_font_weight;
-    color: $white;
-  }
-}
-
-.front-card {
-  position: absolute;
-  top: 17%;
-  right: 80px;
-  width: 275px;
-  height: 200px;
-
-  img {
-    width: 275px;
-    height: 200px;
-    object-fit: contain;
+.left_section {
+    min-height: 100vh;
+    width: 40%;
+    background-image: url("./img/bg-main-desktop.png");
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
     position: relative;
-  }
-
-  .card-logo {
-    position: absolute;
-    z-index: 999;
-    top: 15%;
-    left: 5%;
-
-    img {
-      width: 2.2rem;
-      height: 2.2rem;
-      object-fit: contain;
-    }
-  }
-
-  .card-content-info {
-    position: absolute;
-    z-index: 999;
-    top: 45%;
-    left: 5%;
-    width: 90%;
-    text-transform: uppercase;
-    color: $white;
-
-    .card-number {
-      width: 100%;
-      letter-spacing: 0.2rem;
-    }
-
-    .card-details {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: center;
-      margin-top: 1.4rem;
-      font-size: 0.8rem;
-      font-weight: $normal_font_weight;
-    }
-  }
 }
 
-@media screen and (min-width: 715px) {
-  .card-container {
-    height: 100vh;
-  }
+.cards {
+    position: absolute;
+    top: 50%;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    left: 100%;
+    transform: translate(-50%, -50%);
+}   
 
-  .card {
-    height: 100%;
-    margin-bottom: 0;
-    justify-content: right;
-  }
+.front_card {
+    position: relative;
+    transform: translate(-6.25rem);
+}
 
-  .back-card {
-    margin-top: 10rem;
+.credit_card_logo {
+    position: absolute;
+    top: 1rem;
+    left: 1rem;
+}
 
-    .card-cvc {
-      top: 5.6rem;
+.credit_card_number {
+    position: absolute;
+    color: $white;
+    bottom: 5rem;
+    left: 1rem;
+    letter-spacing: .2rem;
+}
+
+.credit_card_info {
+    position: absolute;
+    bottom: 2rem;
+    left: 1rem;
+    right: 3.5rem;
+    display: flex;
+    color: $white;
+    justify-content: space-between;
+}
+
+.back_card {
+    position: relative;
+}
+
+.credit_card_cvc {
+    position: absolute;
+    right: 3rem;
+    top: 6.9rem;
+    color: $light_grayish_violet;
+}
+
+@media screen and (max-width: 1115px) {
+    .front_card {
+        width: 300px;
+
+        img {
+            width: 300px;
+        }
     }
-  }
 
-  .front-card {
-    top: 4rem;
-    left: 4rem;
+    .card_container {
 
-    .card-logo {
-      left: 2%;
+        .credit_card_logo {
+            width: 50px;
+        }
+
+        .credit_card_number {
+            font-size: 1.1rem;
+        }
     }
 
-    .card-content-info {
-      padding-left: 2%;
-      left: 0;
-      width: calc(275px - 4%);
+    .back_card {
+        width: 300px;
 
-      .card-number {
-        width: 275px;
-      }
+        img {
+            width: 300px;
+        }
 
-      .card-details {
-        // justify-content: space-around;
-      }
+        .credit_card_cvc {
+            top: 41%;
+            right: 11%;
+        }
     }
-  }
+}
+
+@media screen and (max-width: 905px) {
+    .left_section {
+        width: 100%;
+        min-height: 35vh;
+        background-image: url("./img/bg-main-mobile.png");
+    }
+
+    .cards {
+        flex-direction: column-reverse;
+        left: calc(50% + 35px);
+        top: 60%;
+        gap: .5rem;
+    }
+
+    .front_card {
+        width: 280px;
+        transform: translateX(-70px);
+        z-index: 99;
+
+        img {
+            width: 280px;
+        }
+    }
+
+    .card_container {
+
+        .credit_card_logo {
+            width: 50px;
+        }
+
+        .credit_card_number {
+            font-size: 1.1rem;
+        }
+    }
+
+    .back_card {
+        width: 280px;
+        transform: translateY(4.375rem);
+
+        img {
+            width: 280px;
+        }
+
+        .credit_card_cvc {
+            top: 41%;
+            right: 11%;
+        }
+    }
 }
