--- a/src/components/core/App.css
+++ b/src/components/core/App.css
@@ -1,19 +1,23 @@
-.App {
-  display: flex;
-  flex-direction: column;
-  transition: all ease-in-out 0.3s;
-  width: 100%;
-  height: 100%;
-  font-size: 1.125rem;
-  position: relative;
-  overflow-y: scroll;
-  overflow-x: hidden;
+@import url(./shared/_variables.scss);
+
+*, *>* {
+    font-family: "Space Grotesk", sans-serif;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
-@media screen and (min-width: 715px) {
-  .App {
+body {
+    min-height: 100vh;
+}
+
+.App {
     display: flex;
-    flex-direction: row;
-    transition: all ease-in-out 0.3s;
-  }
+    align-items: center;
+}
+
+@media screen and (max-width: 905px) {
+    .App {
+        flex-direction: column;
+    }
 }
