--- a/src/components/core/shared/_variables.scss
+++ b/src/components/core/shared/_variables.scss
@@ -1,18 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500&display=swap');
-
-// --------- Typography ---------
+@import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500&display=swap");
 
 $regular_font_size: 1.125rem;
-$normal_font_weight: 500;
 
-// --------- Colors ---------
-
-// Primary
-
-$liner_gradient: linear-gradient(to top, hsl(249, 99%, 64%), hsl(278, 94%, 30%));
+$liner_gradient: linear-gradient(
+    to top,
+    hsl(249, 99%, 64%),
+    hsl(278, 94%, 30%)
+);
 $red: hsl(0, 100%, 66%);
-
-// Neutral
 
 $white: hsl(0, 0%, 100%);
 $light_grayish_violet: hsl(270, 3%, 87%);
